fix: added some pretty cool style + dark mode

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -12,7 +12,8 @@ body {
 h1 {
   text-align: center;
   font-size: 36px;
-  color: #333;
+  color: white;
   font-weight: bold;
+  font-family: 'Arial', sans-serif;
 }
 
