--- a/src/app/components/image-details/image-details.component.css
+++ b/src/app/components/image-details/image-details.component.css
@@ -1,3 +1,6 @@
 .image-details-container {
   position: relative;
 }
+p, h2 {
+  color: black;
+}
